# ecom-ops-agent-example

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  env.example  main.py  pyproject.toml
agent/: router.py
agent/tools/: action_tool.py  py_tool.py  rag_tool.py  sql_tool.py
apps/api/: main.py
apps/api/routers/: agents.py
apps/ui/: home.py
configs/: models.yaml  settings.toml
infra/: Dockerfile.api  Dockerfile.api.ui  Dockerfile.postgres  Dockerfile.ui  docker-compose.yml
infra/init-db-scripts/: run-ro-wrapper.sh
pipelines/: _manifest.py  build_index.py  download_data.py  ingest.py  schemas.py
tests/integration/: test_api.py  test_ingest.py
tests/unit/: test_truth.py
