[project]
name = "ecom-ops-agent-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "streamlit>=1.50.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.2",
    "types-requests>=2.32.4.20250913",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
lint.select = ["E","F","I","B","UP"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
strict_optional = true
