[project]
name = "ecom-ops-agent-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb==1.1.1",
    "fastapi>=0.120.0",
    "kagglehub>=0.3.13",
    "litellm>=1.79.1",
    "pandas>=2.3.3",
    "prefect>=3.4.25",
    "psycopg2>=2.9.11",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "sqlglot>=27.29.0",
    "streamlit>=1.50.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.2",
    "types-requests>=2.32.4.20250913",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
lint.select = ["E","F","I","B","UP"]
lint.ignore = ["E501", "F401"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
strict_optional = true
